Entwurf bis Ende Semester 1

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@
 !data.txt
 !KW06/img/create_img.ipynb
 !KW06/img/laufzeiten.png
-
+!KW07/bintree/img/traversal_demo.png
 !*.md
 !LICENSE
 # ...even if they are in subdirectories
