--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 !KW06/img/create_img.ipynb
 !KW06/img/laufzeiten.png
 !KW07/bintree/img/traversal_demo.png
+!KW08/wahl25/wahldaten.txt
 !*.md
 !LICENSE
 # ...even if they are in subdirectories
